<resources>
    <string name="app_name" translatable="false">Comprarei</string>
    <string name="cart_sort_name_option">Name</string>
    <string name="cart_sort_date_option">Date</string>
    <string name="title_confirmation">Are you sure?</string>
    <string name="message_delete_confirmation">Do you really want to delete\u0020</string>
    <string name="single_item_confirmation">item</string>
    <string name="multiple_items_confirmation">" items"</string>
    <string name="positive_confirmation">Yes</string>
    <string name="negative_confirmation">Cancel</string>
    <string name="product_sort_name">Name</string>
    <string name="product_sort_price">Price (by lowest)</string>
    <string name="product_sort_total">Total (by lowest)</string>
    <string name="new_product">New product</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="optional">(Optional)</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="empty_list_message">Ops, nothing here yet…</string>
    <string name="new_cart">New cart</string>
    <string name="date_dd_mm_yyyy">Date (dd/mm/yyyy)</string>
    <string name="product">Product</string>
    <string name="x" translatable="false">x</string>
    <string name="sort_type">Sort by:</string>
    <string name="search">Search</string>
    <string name="delete">Delete many</string>
    <string name="sort">Sort</string>
    <string name="share">Share</string>
    <string name="quantity_label">"Quantity: "</string>
    <string name="night_mode">Night mode</string>
    <string name="night_off_msg">Night mode off</string>
    <string name="night_on_msg">Night mode on</string>
    <string name="swipe_delete_msg">Delete</string>
    <string name="swipe_to_edit">Edit</string>
    <string name="total_value">Total value</string>
    <string name="be_careful_title">Be careful!</string>
    <string name="carts_with_category">Looks like you have some carts with this category!\n\nAre you sure?</string>
    <string name="select_items">Select items</string>
    <string name="blank_name">Name can\'t be blank!</string>
    <string name="select_category_color">Please, select a category color!</string>
    <string name="choose_color">Choose color</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="empty_category">Looks like you don\'t have any categories.\n\nAdd a new one :)</string>
    <string name="new_category">New category</string>
    <string name="select_category_color_btn">Select category color</string>
    <string name="select_category_hint">Select category</string>
    <string name="store_hint">Store</string>
    <string name="categories">Categories</string>
    <string name="themes">Themes</string>
    <string name="no_categories">No categories</string>
    <string name="search_carts">Search Carts</string>
    <string name="to">to</string>
    <string-array name="operators">
        <item>Equal</item>
        <item>Less than</item>
        <item>Greater than</item>
        <item>Range</item>
    </string-array>
    <string name="highest_value">Value by Highest</string>
    <string name="lowest_value">Value by Lowest</string>
    <string name="by_done">By Done</string>
    <string name="by_undone">By Undone</string>
    <string name="user_hint" translatable="false">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log-in</string>
    <string name="or">or</string>
    <string name="msg_not_have_account">Don\'t have account?\nClick here</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="client_id" translatable="false">24013763873-mu1pqttcq64v4ua67vh3jminj916o65r.apps.googleusercontent.com</string>
    <string name="six_chars_hint">At least 6 char.</string>
    <string name="uppercase_hint">At least 1 uppercase.</string>
    <string name="number_hint">At least 1 number.</string>
    <string name="create_account">Create account</string>
    <string name="search_products">Search products</string>
    <string name="create_account_error_detail">An error has occourred on creation of your account . Error detail: \n\n %1$s</string>
    <string name="invalid_email">Not a valid e-mail.</string>
    <string name="invalid_name">Not a valid name.</string>
    <string name="password_requisites">Password not have minimum requirement.</string>
    <string name="not_same_password">Passwords do not match.</string>
    <string name="reenter_password">Repeat password</string>
    <string name="login_error_detail">An error has occourred on login.\n\nError detail:  %1$s</string>
    <string name="none_category">Sem categoria</string>
    <string name="name_your_cart">Name your cart</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="more">More</string>
    <string name="more_info">More info</string>
    <string name="required">(Required)</string>
    <string name="sort_and_filter">Sort and Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="category">Category</string>
    <string name="filter_by">Filter by</string>
    <string name="select_date_range">Select date range</string>
    <string name="value">Value</string>
    <string name="operator">Operator</string>
    <string name="max" translatable="false">Max</string>
    <string name="clear_all">Clear all</string>
    <string name="apply">Apply</string>
    <string name="min" translatable="false">Min</string>
    <string name="select_dates">Select dates</string>
    <string name="range" translatable="false">Range</string>
    <string name="edit_category">Edit category</string>
    <string name="shared_file_name" translatable="false">SHARED_COMPRAREI</string>
    <string name="donetobottom_key" translatable="false">DONE_BOTTOM_KEY</string>
    <string name="showtotalcart_key" translatable="false">SHOW_TOTAL_CART_KEY</string>
    <string name="last_backup_key" translatable="false">LAST_BACKUP_KEY</string>
    <string name="configuration">Configurations</string>
    <string name="editar_perfil">Edit profile</string>
    <string name="gerais">General</string>
    <string name="move_to_end_of_list">Move done products to bottom</string>
    <string name="mostrar_total_do_carrinho">Show cart total</string>
    <string name="backup">Backup</string>
    <string name="last_backup">Last backup done at:</string>
    <string name="realizar_backup">Do backup</string>
    <string name="logoff">Log off</string>
    <string name="senha_atual">Current password</string>
    <string name="nova_senha">New password</string>
    <string name="excluir_conta">Delete account</string>
    <string name="salvar">Save changes</string>
    <string name="sign_up">Create account</string>
    <string name="please_fill_in_the_fields_to_create_a_new_account">Please fill in the fields to create a new account.</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="image_uri_key" translatable="false">IMAGE_URI_KEY</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="msg_warning_invalid_password">Password must have at least 6 characters.</string>
    <string name="select_date">Select date</string>
    <string name="initial_product_quantity" translatable="false">1</string>
    <string name="category_name_already_exists">Category name already exists.</string>
    <string name="sorry_that_you_re_leaving">Sorry that you\'re leaving 😓</string>
    <string name="to_delete_account_we_must_re_autenticate_your_user">To delete account, we must re-autenticate your user.</string>
    <string name="account_deletion">Account deletion</string>
    <string name="something_went_wrong_google_account">Something went wrong on login with google, please try again later.</string>
    <string name="confirm">Confirm</string>
    <string name="no_connection_google_account">To login with google, you must have internet connection.</string>
    <string name="info_logged_with_google">Dear user, you have logged with google, so you must re-autenticate tapping in \'Sign in with Google\'.</string>
    <string name="successfully_re_authenticated">✅ Successfully re-authenticated. Now you can confirm account deletion.</string>
    <string name="user_already_re_autenticated">User already re-autenticated</string>
    <string name="wrong_user_or_password">Wrong user or password.</string>
    <string name="re_autenticate">Re-autenticate</string>
    <string name="re_autentication_offline">To re-autenticate user, you must have internet connection.</string>
    <string name="msg_exp_user_password_invalid">Invalid user or password.</string>
    <string name="msg_exp_upload_profile_picture_failed">We have some problem uploading profile picture.</string>
    <string name="user_already_exists">User already exists.</string>
    <string name="password_not_meet_minimum_requirement">Password not meet minimum requirement.</string>
    <string name="failed_to_retrieve_profile_picture">Failed to retrieve profile picture</string>
    <string name="no_user_logged">No user logged.</string>
    <string name="failed_to_save_user_but_exception_don_t_have_message">Failed to save user but exception don\'t have message.</string>
    <string name="your_current_password_is_incorrect">Your current password is incorrect.</string>
    <string name="something_went_wrong_on_updating_profile_picture">Something went wrong on updating profile picture.</string>
    <string name="failed_to_download_profile_picture">Failed to download profile picture.</string>
    <string name="can_t_get_carts_registers">Can\'t get carts registers.</string>
    <string name="can_t_get_products_registers">Can\'t get products registers.</string>
    <string name="can_t_get_categories_registers">Can\'t get categories registers.</string>
    <string name="something_went_wrong_on_document_creation">"Something went wrong on cloud document creation "</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc justo est, ullamcorper non erat at, rhoncus finibus magna. Sed hendrerit, mauris et imperdiet tempor, nunc diam ornare enim, pulvinar consectetur ante felis imperdiet eros. Etiam mollis velit a venenatis faucibus. Nam semper nulla sed ex elementum dictum et ut quam. Suspendisse semper semper tortor, sit amet varius odio tincidunt id. Nulla facilisis est et nunc ultrices consectetur. Vestibulum porta mi nunc. Nullam pellentesque augue leo, mollis venenatis erat rutrum vitae. Pellentesque sit amet congue metus. Aliquam tristique ipsum id varius scelerisque. Duis lobortis semper nisl, vel sagittis dui iaculis tincidunt.</string>
    <string name="ops_something_went_wrong">Ops... something went wrong!</string>
    <string name="exception_screen_message">We had an unexpected error. The details were sent to our team, and we will fix it quickly. Sorry for the inconvenience.</string>
    <string name="restart_comprarei">Restart Comprarei</string>
    <string name="details">Details</string>
    <string name="profile_successfully_edited">Profile successfully edited.</string>
    <string name="edit_profile_error">Sorry, we can not update your profile right now. Please, try again in a few minutes.</string>
    <string name="auto_backup_key" translatable="false">AUTO_BACKUP</string>
    <string name="conceder">Conceder</string>
    <string name="nao_conceder">Não conceder</string>
    <string name="permissao_notificaco_negada">Notification permission denied</string>
    <string name="msg_permissao_notificacao_negada">Seems that you did not granted notification permission. None notification will show.</string>
    <string name="permissao_notificacao">Notification permission</string>
</resources>