<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".view.activity.CrashActivity">


    <TextView
        android:id="@+id/error_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ops_something_went_wrong"
        android:layout_marginTop="12dp"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:text="@string/exception_screen_message"
        app:layout_constraintTop_toBottomOf="@id/error_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/error_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/detail_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:layout_marginTop="21dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/error_message"
        app:layout_constraintStart_toStartOf="parent"/>

    <ScrollView
        android:id="@+id/scroll_info"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/detail_txv"
        app:layout_constraintBottom_toTopOf="@id/ok_btn">

        <TextView
            android:id="@+id/error_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/black"/>

    </ScrollView>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>