<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_category"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_24"
        android:layout_margin="12dp"
        android:background="@color/white"
        android:visibility="gone"
        tools:visibility="visible"
        app:tint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_name_layout"
        style="@style/MyInputTextStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:hint="@string/name"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category_name"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:inputType="textCapSentences|text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_category_color"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/category_icon_24"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        app:tint="@color/white"
        tools:tint="@color/black"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/category_name_layout"
        app:layout_constraintTop_toBottomOf="@id/category_name_layout"
        app:layout_constraintEnd_toStartOf="@id/color_select"/>

    <Button
        android:id="@+id/color_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_category_color_btn"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@id/image_category_color"
        app:layout_constraintTop_toBottomOf="@id/category_name_layout"
        app:layout_constraintEnd_toEndOf="@id/category_name_layout"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/gray"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok"
        app:layout_constraintTop_toBottomOf="@+id/color_select" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/save"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="@id/color_select" />







</androidx.constraintlayout.widget.ConstraintLayout>